# fastgws

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  services.toml  sitemap.xml
docs/api/: admin_reports.md  drive.md  gmail.md  index.md  keep.md  sheets.md
fastgws/: __init__.py  _modidx.py  all.py  auth.py  cli.py  core.py  errors.py  helpers.py  models.py  schema.py  skill.py  transport.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
tests/: conftest.py  helpers.py  test_auth.py  test_cli.py  test_fetch.py  test_manifest.py  test_normalize.py  test_package.py  test_pagination.py  test_request_compose.py  test_runtime.py  test_schema.py  test_transport.py
