[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastgws"
dynamic = ["version"]
description = "A discovery-driven Google Workspace client"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "fastgws contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "google-auth",
  "google-auth-oauthlib",
  "requests",
]

[project.optional-dependencies]
dev = [
  "fastship",
  "build",
  "pytest",
  "twine",
]

[project.scripts]
fastgws = "fastgws.cli:main"

[project.urls]
Homepage = "https://github.com/AnswerDotAI/fastgws"

[tool.setuptools.dynamic]
version = { attr = "fastgws.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
