[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastgws"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Nathan", email = "nc@answer.ai"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['fastcore', 'fastspec', 'google-api-python-client>=2.120.0', 'google-auth>=2.30.0',
                'google-auth-oauthlib>=1.2.0', 'google-auth-httplib2>=0.2.0', 'httpx2']

[project.urls]
Repository = "https://github.com/answerdotai/fastgws"
Documentation = "https://answerdotai.github.io/fastgws/"

[project.entry-points.nbdev]
fastgws = "fastgws._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastgws.__version__"}

[tool.setuptools.packages.find]
include = ["fastgws"]

[tool.nbdev]
allowed_metadata_keys = ['solveit']
allowed_cell_metadata_keys = ['solveit_ai']

[project.entry-points.pyskills]
"fastgws.skill" = "fastgws.skill"
